# genuary

./: .gitmodules  CMakeLists.txt
scripts/: build_2023.sh  fmt.sh
src/2023/: j1.cpp  j2.cpp  j23.cpp  j4.cpp
